# zenilib

./: .gitignore  COPYING  Doxyfile  Makefile  README  README.md  SConstruct  Zeni NSIS Settings.txt  Zeni NSIgen.sln  Zeniapp_2005.sln  Zeniapp_2005.vcproj  Zeniapp_2005_Tweak_Guide.txt  Zeniapp_2008.sln  Zeniapp_2008.vcproj  Zeniapp_SoarSML_2005.sln  Zeniapp_SoarSML_2005.vcproj  Zeniapp_SoarSML_2008.sln  Zeniapp_SoarSML_2008.vcproj  Zenilib_2005.vcproj  Zenilib_2008.vcproj  header.txt  multi-build_sh.bat  multi-clean_sh.bat  multi-lessclean_sh.bat  multi-lesspremake_sh.bat  multi-premake_sh.bat  premake4.lua  zeniapp.cpp  zenilib_clean+strip_aio.bat  zenilib_clean.bat  zenilib_clean_extra.bat  zenilib_strip_debug.bat  zenilib_strip_sources.bat.unsafe  zenilib_strip_x64.bat
zenilib/: .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.txt  SConstruct  Zeniapp_2005.vcproj  Zeniapp_2008.vcproj  Zeniapp_SoarSML_2008.vcproj  Zenilib_2005.vcproj  Zenilib_2008.vcproj  multi-build_sh.bat  multi-clean_sh.bat  multi-lessbuild_sh.bat  multi-lessclean_sh.bat  multi-premake_sh.bat  multibuild_sh.bat  pc_build_release.bat  pc_clean.bat  premake4-less.lua  premake4.lua  zeniapp.ini  zenilib_clean+strip_aio.bat  zenilib_clean_extra.bat  zenilib_strip_debug.bat  zenilib_strip_sources.bat.unsafe  zenilib_strip_x64.bat
zenilib/Code Blocks/: application.cbp  zenilib.cbp
zenilib/Visual Studio 2008/: Application_2008.vcproj  Application_SoarSML.vcproj  Application_SoarSML_2008.vcproj  Launcher.cpp  Launcher.vcproj  README.txt  Zeniapp_2008.vcproj  Zeniapp_2008_Tweak_Guide.txt  Zeniapp_SoarSML_2008.sln  Zeniapp_SoarSML_2008.vcproj  Zenilib_2008.sln  Zenilib_2008.vcproj  Zenilib_SoarSML_2008.sln  zenilib_clean++_x86.bat  zenilib_clean+strip_aio.bat  zenilib_clean.bat  zenilib_clean_extra.bat  zenilib_strip_debug.bat  zenilib_strip_sources.bat.unsafe  zenilib_strip_x64.bat
zenilib/Visual Studio 2010/: Application.vcxproj  Application.vcxproj.filters  Application_SoarSML.vcxproj  Application_SoarSML.vcxproj.filters  Launcher.cpp  Launcher.vcxproj  Zenilib.vcxproj.filters  Zenilib_2010.sln  Zenilib_SoarSML_2010.sln  zeni.vcxproj  zeni.vcxproj.filters  zeni_audio.vcxproj  zeni_core.vcxproj  zeni_graphics.vcxproj  zeni_graphics.vcxproj.filters  zeni_net.vcxproj  zeni_net.vcxproj.filters  zeni_rest.vcxproj
zenilib/Xcode 3.1.2/: Home  Zeniapp_Prefix.pch  Zenilib.plist  copy_game_files.sh
zenilib/Xcode 3.1.2 (transitional name)/: SDLMain.m  Zeniapp.plist
zenilib/clean/: zenilib.py  zenilib_clean++.bat  zenilib_clean++.py  zenilib_clean++_x86.bat  zenilib_clean++_x86.py  zenilib_clean.bat  zenilib_clean.py  zenilib_clean_extra.bat  zenilib_clean_extra.py  zenilib_clean_extra_x86.bat  zenilib_clean_extra_x86.py  zenilib_strip_sources.bat.unsafe  zenilib_strip_sources.py.unsafe  zenilib_strip_x64.bat  zenilib_strip_x64.py
zenilib/config/: colors.txt  colors.xml  fonts.xml  sounds.xml  textures.xml  zenilib.xml
zenilib/dev/: all_clean.sh  android_logcat.sh  linux_build.sh  ndk-gdb  (+3 more)
(+678 files in other folders)
